# PINNeAPPle

./: .gitignore  404.html  PINNeAPPle_Executive_Demo_Heat3D_Laplace (1).ipynb  QUICKSTART.md  README.md  SECURITY.md  __init__.py  __init__.py.bak  index.html  learning_presentation.html  mkdocs.yml  objects.inv  presentation.html  pyproject.toml  requirements-docs.txt  viz_run_log.txt
SUMMARY/: index.html
api/: index.html
benchmarks/: __init__.py  data_io_bench.py  shard_balance_bench.py
checkpoints/: hybrid_fft_lstm.pt  pure_lstm.pt
data/: synthetic_multivariate.csv
docs/: SUMMARY.md  index.md  philosophy.md  why.md
examples/: geom_step_pointcloud_opt_loop.py  solvers_decomp_demo.py
notebooks/: PINNeAPPle_Executive_Demo_Heat3D_Laplace (1).ipynb  PINNeAPPle_Executive_Demo_Heat3D_Laplace.ipynb
philosophy/: index.html
pinneaple/: __init__.py
pinneaple-app/: app.py  requirements.txt  run.bat  run.sh  setup.bat  setup.sh
pinneaple_arena/: __init__.py  api.py  benchmark.py  meta_benchmark.py  registry.py  transfer_benchmark.py
pinneaple_backend/: __init__.py  backend.py  jax_backend.py
pinneaple_capabilities/: __init__.py
pinneaple_cosim/: __init__.py  connection.py  engine.py  graph.py  losses.py  node.py  recorder.py  utils.py
pinneaple_data/: __init__.py  active_learning.py  collate.py  collocation.py  dataloaders.py  physical_sample.py  serialization.py  stl_import.py  zarr_cached_store_bytes.py  zarr_prefetch.py  zarr_store.py
pinneaple_design_opt/: __init__.py  adjoint.py  constraints.py  objective.py  optimizer.py  pareto.py  pipeline.py  refinement.py  surrogate.py
pinneaple_digital_twin/: __init__.py  state.py  twin.py
pinneaple_dynamics/: __init__.py  mpm.py  particles.py  rigid_body.py
pinneaple_environment/: __init__.py  builder.py  conditions.py  environment_typing.py  scales.py  spec.py  turbulence_presets.py
pinneaple_export/: __init__.py
pinneaple_geom/: __init__.py  csg.py  mesh_collocator.py  stl_domain_batch_builder.py
pinneaple_inference/: __init__.py  infer.py  postprocess.py  visualize.py
pinneaple_inverse/: __init__.py  ensemble_kalman.py  noise_models.py  obs_operator.py  regularization.py  sensitivity.py  solver.py
pinneaple_learning/: README.md  __init__.py  concepts.py  learning_path.py
pinneaple_meta/: __init__.py  config.py  maml.py  meta_model.py  reptile.py  task_sampler.py
pinneaple_models/: __init__.py  _registry_bridge.py  afno.py  base.py  group_b_registry.py  hash_grid.py  instantiate.py  mesh_graph_net.py  modified_mlp.py  register_all.py  registry.py  siren.py
pinneaple_pinn/: __init__.py  domino.py
pinneaple_problemdesign/: protocol.py
pinneaple_quantum/: __init__.py
pinneaple_registry/: __init__.py
pinneaple_serve/: __init__.py  app.py  cli.py  config.py  middleware.py  server.py
pinneaple_solvers/: __init__.py  ceemdan.py  cfd_pipeline.py  dfsph.py  eemd.py  fdm.py  fdm3d.py  fem.py  fenics_bridge.py  fft.py  fvm.py  hilbert_huang.py  isph.py  lbm.py  meshfree.py  neighbors.py  openfoam_bridge.py  problem_runner.py  registry.py  spectral.py  sph.py  sph_boundaries.py  ssa.py  sst.py  stl.py  vmd.py  wavelet.py
pinneaple_symbolic/: __init__.py  bc.py  compiler.py
pinneaple_timeseries/: __init__.py  csv_loader.py  datamodule.py  metrics.py  problem.py
pinneaple_train/: __init__.py  causal.py  distributed.py  hpc.py  losses.py  metrics_cfg.py  parallel.py  preprocess.py  time_marching.py  trainer.py  two_phase.py  weight_scheduler.py
pinneaple_transfer/: __init__.py  adapter.py  config.py  freeze.py  parametric.py  trainer.py
pinneaple_uq/: __init__.py  calibration.py  conformal.py  core.py  ensemble.py  mc_dropout.py
pinneaple_validate/: __init__.py  analytical.py  boundary.py  conservation.py  core.py  symmetry.py  validator.py
pinneaple_viz/: __init__.py  animation.py  fields.py  mesh.py  pinn.py  solver.py  style.py  vortex.py  voxel.py
pinneaple_worldmodel/: __init__.py  adapter.py  data_gen.py  scene.py
projects/: main.py
runs/: hybrid.best.pt  hybrid.config.json  hybrid.jsonl  lstm.best.pt  lstm.config.json  lstm.env.json  lstm.jsonl
search/: search_index.json
templates/: 01_basic_pinn.py  02_symbolic_pde.py  03_navier_stokes_pinn.py  04_domain_decomposition.py  05_causal_training.py  06_time_marching.py  07_ddp_distributed.py  08_csg_geometry.py  09_flow_visualization.py  10_shape_optimization.py  11_cad_to_cfd.py  (+24 more)
(+1117 files in other folders)
